<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.wcdevs.blog</groupId>
  <artifactId>awsdeployer</artifactId>
  <version>0.1</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <cdk.version>1.131.0</cdk.version>
    <junit.version>5.8.1</junit.version>
    <mockito.version>4.0.0</mockito.version>
    <passay.version>1.6.1</passay.version>
    <cdk-constructs.version>2.1.0</cdk-constructs.version>
  </properties>

  <dependencies>
    <!-- region AWS Cloud Development Kit -->
    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>core</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>ec2</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>cognito</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>lambda-event-sources</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>events-targets</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>secretsmanager</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>amazonmq</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>cloudwatch</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>cloudwatch-actions</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>synthetics</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>route53</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>route53-targets</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>elasticloadbalancingv2</artifactId>
      <version>${cdk.version}</version>
    </dependency>

    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>certificatemanager</artifactId>
      <version>${cdk.version}</version>
    </dependency>
    <!--endregion-->

    <dependency>
      <groupId>org.passay</groupId>
      <artifactId>passay</artifactId>
      <version>${passay.version}</version>
    </dependency>

    <dependency>
      <groupId>org.wcdevs.blog</groupId>
      <artifactId>cdk</artifactId>
      <version>${cdk-constructs.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
      </plugin>
    </plugins>
  </build>
</project>
